docs/examples/cert-manager/http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: voyager
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - kiteci.appscode.ninja
      secretName: quickstart-kiteci-tls
  rules:
    - http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
            path: /
